--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,5 +1,4 @@
-@mixin center() {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@mixin size($width, $height) {
+    width: $width;
+    height: $height;
 }
