--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,17 +1,20 @@
 // font family
-$font-stack-base: 'Helvetica Neue', Helvetica, Hiragino Sans GB, Arial, sans-serif, serif !default;
-$font-stack-login: Poppins-Regular, sans-serif !default;
+$font-stack-base       : 'Helvetica Neue', Helvetica, Hiragino Sans GB, Arial, sans-serif, serif !default;
+$font-stack-login      : Poppins-Regular, sans-serif !default;
 $font-stack-login-title: Poppins-Bold !default;
 
 // colors
-$primary-color: #f2f2f2 !default;
-$white        : #fff !default;
-$black         : #000 !default;
-$black-light   : #333 !default;
+$primary-color : #f2f2f2 !default;
+$white         : #fff    !default;
+$black         : #000    !default;
+$black-light   : #333    !default;
+$gray          : #666    !default;
+$bule          : #21d4fd !default;
+$purple        : #b721ff !default;
 
 // background colors
 $bg-color-base: $primary-color !default;
 
 // radius
-$radius-login-wrap : 10px !default;
+$radius-login-wrap    : 10px !default;
 $radius-login-form-btn: 25px !default;
