--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,6 @@
 $font-stack: 'Helvetica Neue', Helvetica, Hiragino Sans GB, 'Segoe UI', Arial, sans-serif, serif;
 $primary-color: #f2f2f2;
+
+
+// margin
+$margin-detail-form: 10%;
