add part profile

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -9,7 +9,7 @@ body {
 body {
     font-family: $font-stack-base;
     -webkit-font-smoothing: antialiased;
-    background: $primary-color;
+    // background: $primary-color;
 }
 
 .container {
