--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,4 +1,5 @@
 .paper {
+    position: relative;
     width: 100%;
     margin: 10% 0;
     padding: 2% 6% 4% 6%;
@@ -12,4 +13,10 @@
 .paper:hover {
     box-shadow: 0 26px 40px -24px rgba(0, 36, 100, 0.3);
     transform: translateY(-6px);
+}
+
+.button-fields {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
 }
