--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -1,5 +1,5 @@
 @import '../../styles/_variables.scss';
-*{
+* {
     margin: 0;
     padding: 0;
 }
@@ -21,10 +21,9 @@ li {
     top: 0;
     left: 2%;
     height: 55px;
-}
-
-.logo img {
-    height: 100%;
+    img {
+        height: 100%;
+    }
 }
 
 .main {
@@ -35,14 +34,13 @@ li {
 .nav {
     overflow: hidden;
     color: $theme-color;
-}
-
-.nav li {
-    float: left;
-    height: 55px;
-    padding: 0 10px;
-    line-height: 55px;
-    cursor: default;
+    li {
+        float: left;
+        height: 55px;
+        padding: 0 10px;
+        line-height: 55px;
+        cursor: default;
+    }
 }
 
 .center {
