--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -13,3 +13,10 @@
     box-shadow: 0 26px 40px -24px rgba(0, 36, 100, 0.3);
     transform: translateY(-6px);
 }
+
+.chipWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    // justify-content: center;
+}
