--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -1,6 +1,7 @@
 .chip {
-    float: left;
-    margin: 2% 3%!important;
+    // float: left;
+    // width: 30px;
+    margin: 2% 2%!important;
     padding: 0 2%!important;
     transition: all .45s cubic-bezier(.23,1,.32,1) 0ms;
 }
