--- a/src/containers/Profile/Profile.scss
+++ b/src/containers/Profile/Profile.scss
@@ -91,7 +91,7 @@ src: url('../../../static/fonts/JosefinSans-Italic.ttf'),
     }
 
     .btn-back{
-        margin:30px auto;
+        margin:20% auto 10%;
     }
     
 
@@ -114,11 +114,6 @@ src: url('../../../static/fonts/JosefinSans-Italic.ttf'),
             line-height: 50px;
         }
     }
-
-    // .tags {
-    //     overflow: hidden;
-    //     padding:20px 40px;
-    // }
 
     .tags {
         overflow: hidden;
