--- a/src/components/ImageUpload/ImageUpload.scss
+++ b/src/components/ImageUpload/ImageUpload.scss
@@ -4,9 +4,22 @@
 .main {
     // @include center;
     // flex-direction: column; 
+    overflow: hidden;
     width: 200px;
-    height: 200px;
-    float: right;
+    // float: right;
+}
+
+.avatar {
+    margin:20px;
+    overflow: hidden;
+    border-radius: $radius-base;
+    box-shadow: 0 0 10px $gray-light;
+}
+
+.avatar-img {
+    float: left;
+    width: 150px;
+    height: 150px;
 }
 
 .btn {
@@ -24,17 +37,4 @@
 
 .btn:hover {
     background: $theme-color-light;
-}
-
-.avatar {
-    margin:20px;
-    overflow: hidden;
-    border-radius: $radius-base;
-    box-shadow: 0 0 10px $gray-light;
-}
-
-.avatar-img {
-    float: left;
-    width: 150px;
-    height: 150px;
 }
