--- a/src/containers/Detail/index.scss
+++ b/src/containers/Detail/index.scss
@@ -1,8 +1,14 @@
+@import '../../styles/_mixins.scss';
+
 .main {
     padding: 30px 0;
 }
 
 //step1
+.img-wrapper {
+    @include center();
+}   
+
 .form {
     display: flex;
     flex-direction: row;
