--- a/src/components/Memorabilia/Memorabilia.scss
+++ b/src/components/Memorabilia/Memorabilia.scss
@@ -11,3 +11,9 @@
     box-shadow: 0 26px 40px -24px rgba(0, 36, 100, 0.3);
     transform: translateY(-6px);
 }
+
+.button-fields {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
