--- a/src/containers/Edit/EditCard.scss
+++ b/src/containers/Edit/EditCard.scss
@@ -4,6 +4,11 @@
 
 .wrap {
     @extend %edit-card;
+    &:hover {
+        .edit-button-wrap {
+            display: block;
+        }
+    }
     .head {
         border-bottom: 1px $edit-border-color solid;
         .title {
@@ -11,5 +16,11 @@
             line-height: 1.5em;
             font-weight: normal;
         }
+    }
+    .edit-button-wrap {
+        display: none;
+        position: absolute;
+        top: 10px;
+        right: 20px;
     }
 }
