--- a/src/containers/Edit/Edit.scss
+++ b/src/containers/Edit/Edit.scss
@@ -6,36 +6,60 @@
     box-sizing: border-box;
     @include size(100%, 100%);
     background: $edit-bg-color;
-}
-
-.fields {
-    width: 70%;
-    display: inline-block;
-}
-
-.avatar {
-    float: right;
-}
-
-.chip-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 15px;
-    .chip {
-        margin: 6px !important;
+    .fields {
+        width: 70%;
+        display: inline-block;
     }
-}
+    
+    .avatar {
+        float: right;
+        width: 230px;
+        height: 230px;
+    }
+    
+    .chip-wrap {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 15px;
+        .chip {
+            margin: 6px !important;
+        }
+    }
 
-.dialog-wrap {
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 1;
-    @include size(100%, 100%);
-    background: rgba(0, 0, 0, 0.54);
-    transform: translateZ(0px);
-    transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    .photo-wrap {
+        padding: 20px;
+    }
+
+    .timeline-wrap {
+        margin-top: 15px;
+        .timeline-item {
+            &:hover {
+                .edit-btn-wrap {
+                    display: inline-block;
+                }
+            }
+            .edit-btn-wrap {
+                display: none;
+                margin-top: -20px;
+                .edit-btn {
+                    width: 20px!important;
+                    height: 20px!important;
+                }
+            }
+        }
+    }
+    
+    .dialog-wrap {
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 1;
+        @include size(100%, 100%);
+        background: rgba(0, 0, 0, 0.54);
+        transform: translateZ(0px);
+        transition: left 0ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    }
 }
