--- a/src/styles/_placeholder.scss
+++ b/src/styles/_placeholder.scss
@@ -16,6 +16,7 @@
 
 %edit-card {
     box-sizing: border-box;
+    position: relative;
     overflow: hidden;
     width: 1000px;
     padding: 16px;
