--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -39,7 +39,7 @@ li {
         height: 55px;
         padding: 0 10px;
         line-height: 55px;
-        cursor: default;
+        cursor: pointer;
     }
 }
 
