--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
     font-size: 20px;
     line-height: 48px;
     border: 1px solid #111;
-    cursor: default;
+    cursor: pointer;
     transition: all 0.4s ease-in-out;
 }
 
