--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -3,7 +3,7 @@
     width: 40px;
     height: 40px;
     border: 1px solid #111;
-    cursor: default;
+    cursor: pointer;
     transition: all 0.4s ease-in-out;
     align-items: center;
     justify-content: center;
