--- a/src/components/ImageUpload/ImageUpload.scss
+++ b/src/components/ImageUpload/ImageUpload.scss
@@ -2,39 +2,33 @@
 @import '../../styles/variables.scss';
 
 .main {
-    // @include center;
-    // flex-direction: column; 
     overflow: hidden;
     width: 200px;
-    // float: right;
-}
-
-.avatar {
-    margin:20px;
-    overflow: hidden;
-    border-radius: $radius-base;
-    box-shadow: 0 0 10px $gray-light;
-}
-
-.avatar-img {
-    float: left;
-    width: 150px;
-    height: 150px;
-}
-
-.btn {
-    padding: 0 16px;
-    margin: 0 auto;
-    width: 50%;
-    text-align: center;
-    line-height: 36px;
-    color: $white;
-    background: $theme-color;
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
-    border-radius: 2px;
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-}
-
-.btn:hover {
-    background: $theme-color-light;
+    .avatar {
+        margin:20px;
+        overflow: hidden;
+        border-radius: $radius-base;
+        box-shadow: 0 0 10px $gray-light;
+        .avatar-img {
+            float: left;
+            width: 150px;
+            height: 150px;
+        }
+    }
+    .upload-btn {
+        padding: 0 16px;
+        margin: 0 auto;
+        width: 50%;
+        text-align: center;
+        line-height: 36px;
+        color: $white;
+        cursor: pointer;
+        background: $theme-color;
+        box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+        border-radius: 2px;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+        &:hover {
+            background: $theme-color-light;
+        }
+    }
 }
