--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,6 @@ $font-stack-login      : Poppins-Regular, sans-serif !default;
 $font-stack-login-title: Poppins-Bold !default;
 
 // colors
-$primary-color    : #f2f2f2            !default;
 $theme-color      : rgb(69, 90, 100)   !default;
 $theme-color-light: rgb(159, 172, 179) !default;
 $edit-bg-color    : #f5f8fa            !default;
@@ -18,10 +17,14 @@ $bule             : #21d4fd            !default;
 $purple           : #b721ff            !default;
 
 // background colors
-$bg-color-base: $primary-color !default;
+$login-bg-color   : #f2f2f2            !default;
+// $bg-color-base: $login-bg-color !default;
 
 // margin
 $margin-detail-form: 10%;
+
+// width
+$width-base: 960px !default;
 
 // radius
 $radius-base          : 50%  !default;
