--- a/src/containers/Edit/Edit.scss
+++ b/src/containers/Edit/Edit.scss
@@ -31,16 +31,37 @@
         align-items: center;
         position: relative;
         padding: 20px;
-        .preview {
-            display: inline-block;
-            @include size(150px, 150px);
-            overflow: hidden;
-            border-radius: 2px;
-            box-shadow: 0 0 10px $gray-light;
-            .preview-img {
-                float: left;
-                width: 150px;
-                height: 150px;
+        .photo-upload-wrap {
+            height: 150px;
+            margin-right: 10px;
+            .photo-preview {
+                display: inline-block;
+                @include size(150px, 150px);
+                overflow: hidden;
+                border-radius: 2px;
+                box-shadow: 0 0 10px $gray-light;
+                .preview-img {
+                    float: left;
+                    width: 150px;
+                    height: 150px;
+                }
+            }
+            .photo-upload-btn {
+                @include size(150px, 150px);
+                transform: translateY(-100%);
+                text-align: center;
+                line-height: 36px;
+                opacity: 0;
+                color: $white;
+                cursor: pointer;
+                background: $theme-color;
+                box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px,
+                rgba(0, 0, 0, 0.12) 0px 1px 4px;
+                border-radius: 2px;
+                transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+                &:hover {
+                    background: $theme-color-light;
+                }
             }
         }
         .upload-photo-btn {
