--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     padding: 15px 0;
+    height: 65px;
     font-size: 15px;
     border-bottom: 1px $edit-border-color solid;
     &:hover {
