--- a/src/containers/Edit/Edit.scss
+++ b/src/containers/Edit/Edit.scss
@@ -98,6 +98,11 @@
                     height: 20px!important;
                 }
             }
+            .add-experience-btn {
+                display: flex!important;
+                align-items: center!important;
+                justify-content: center!important;
+            }
         }
     }
     
