--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,5 +20,15 @@
       .fade-exit.fade-exit-active {
         opacity: 0.01;
         transition: opacity .3s ease-in;
-      }    
+      }
+
+      input:-webkit-autofill, 
+      textarea:-webkit-autofill, 
+      select:-webkit-autofill { 
+          box-shadow: 0 0 0 1000px white inset; 
+      }
+
+      input[type=text]:focus, input[type=password]:focus, textarea:focus {
+          box-shadow: 0 0 0 1000px white inset; 
+     }
 }
