--- a/src/containers/Detail/Detail.scss
+++ b/src/containers/Detail/Detail.scss
@@ -36,3 +36,25 @@
 .addBtn {
     margin-bottom: 40px;
 }
+
+.memorabilia-example {
+    position: relative;
+    width: 100%;
+    margin: 5% 0;
+    padding: 4% 6% 4% 6%;
+    font-family: $font-stack-base;
+    border: 1px solid #e4ecf3;
+    overflow: hidden;
+    transition: all .3s ease;
+    .memorabilia-example-name {
+        font-weight: bold;
+    }
+    .memorabilia-example-title {
+        text-align: center
+    }
+}
+
+.memorabilia-example:hover {
+    box-shadow: 0 26px 40px -24px rgba(0, 36, 100, 0.3);
+    transform: translateY(-6px);
+}
