--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -31,3 +31,7 @@ $radius-base          : 50%  !default;
 $radius-login-wrap    : 10px !default;
 $radius-login-form-btn: 25px !default;
 $radius-edit-card     : 4px  !default;
+
+$spinkit-spinner-margin: 40px auto !default;
+$spinkit-size: 40px !default;
+$spinkit-spinner-color: #333 !default;
