--- a/src/components/ImageUpload/ImageUpload.scss
+++ b/src/components/ImageUpload/ImageUpload.scss
@@ -1,7 +1,20 @@
 @import '../../styles/mixins.scss';
 @import '../../styles/variables.scss';
 
+.loading-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background: rgba(24, 22, 22, 0.294);
+}
+
 .wrap {
+    position: relative;
     overflow: hidden;
     width: 200px;
     .preview {
