--- a/src/containers/Detail/Detail.scss
+++ b/src/containers/Detail/Detail.scss
@@ -1,5 +1,6 @@
-@import '../../styles/_mixins.scss';
-@import '../../styles/_variables.scss';
+@import '../../styles/variables.scss';
+@import '../../styles/placeholder.scss';
+@import '../../styles/mixins.scss';
 
 .main {
     padding: 30px 0;
@@ -22,6 +23,51 @@
     }
     .btn-more {
         margin-top: 12px;
+    }
+}
+
+.photo {
+    margin: 50px 0;
+}
+
+.photo-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 20px 20px 20px 0px;
+    .photo-upload-wrap {
+        // height: 0px;
+        position: relative;
+        margin-right: 10px;
+        .photo-preview {
+            display: inline-block;
+            @include size(150px, 210px);
+            overflow: hidden;
+            border-radius: 2px;
+            box-shadow: 0 0 10px $gray-light;
+            .preview-img {
+                float: left;
+                width: 150px;
+                height: 210px;
+            }
+        }
+        .photo-upload-btn {
+            width: 150px;
+            text-align: center;
+            line-height: 36px;
+            // opacity: 0;
+            color: $white;
+            cursor: pointer;
+            background: $theme-color;
+            box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px,
+            rgba(0, 0, 0, 0.12) 0px 1px 4px;
+            border-radius: 2px;
+            transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+            &:hover {
+                background: $theme-color-light;
+            }
+        }
     }
 }
 
