--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -19,7 +19,7 @@ li {
 .logo {
     position: absolute;
     top: 0;
-    left: 2%;
+    // left: 2%;
     height: 55px;
     cursor: pointer;
     img {
