--- a/src/containers/Profile/Profile.scss
+++ b/src/containers/Profile/Profile.scss
@@ -133,6 +133,12 @@ src: url('../../../static/fonts/JosefinSans-Italic.ttf'),
     .timeline {
         padding: 20px 40px;
     }
+    
+    .wechat {
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+    }
 
 }
 
